--- a/service-web/src/views/Dashboard/dashboard.html
+++ b/service-web/src/views/Dashboard/dashboard.html
@@ -4,8 +4,8 @@
       <h3 class="f3 fw2 dark-blue pt2 pb2">DASHBOARD PROPOSAL</h3>
     </div>
   </header>
-  <section class="cf w-100 pl3 pr3 pt5 gradient-blue">
-    <div class="w-100 w-80-ns center">
+  <section class="cf w-100 ph0 ph6-l pt5 gradient-blue">
+    <div class="dt w-100 mw8 ph3 ph3-m ph3-l center">
       <div class="w-100 bg-white black br3 mb4">
         <span class="w-100 db bg-washed-blue br4 br--top bt3">
           <span class="w-30 db br4 bg-dark-blue pa1"></span>
@@ -39,16 +39,16 @@
       </div>
     </div>
   </section>
-  <section class="cf w-100 relative">
-    <div class="gradient-blue-1 w-100 pv5 absolute h-25 z-0"></div>
-    <div class="w-100 w-80-ns center relative">
-      <div class="cf ">
-        <div class="fl w-100 w-50-l pl3 pr3 ">
+  <section class="cf w-100 ph0 ph6-l relative">
+    <div class="dt w-100 mw8 ph3 ph3-m ph3-l center">
+      <div class="gradient-blue-1 w-100 left-0 right-0 absolute h-25 z-0"></div>
+      <div class="cf relative">
+        <div class="fl w-100 w-50-l pl0 pr0 pr3-l  ">
           <div class="bg-white br3 box-shadow-grey">
-            <ul class="list pl0 tl navy">
-              <li class="pa3 pa4-ns bb b--black-10 pb5-ns">
-                <b class="db f3 mb1 w-70 fl">My journal</b>
-                <div class="db f6 mb1 tr fw6 fr w-30 pr3 light-blue">SEE ALL NOTES</div>
+            <ul class="list pl0 tl navy mt0">
+              <li class="pa3 pa4-ns bb b--black-10 pb5 pb5-l">
+                <b class="db f3 mb1 w-50 w-70-l fl">My journal</b>
+                <div class="db f6 mb1 tr fw6 fr w-50 w-30-l pr3 light-blue">SEE ALL NOTES</div>
               </li>
               <li class="pa3 pa4-ns bb b--black-10">
                 <span class="f5 db lh-copy measure">
@@ -68,10 +68,10 @@
             </ul>
           </div>
         </div>
-        <div class="fl w-100 w-50-l pl3 pr3 ">
+        <div class="fl w-100 w-50-l pl0 pl3-l  ">
           <div class="bg-white br3 box-shadow-grey">
-            <ul class="list pl0 tl navy">
-              <li class="pa3 pa4-ns bb b--black-10">
+            <ul class="list pl0 tl navy mt0">
+              <li class=" pt4 pb4  pb1-m pa4 pa4-l">
                 <b class="db f3 mb1">January 2018</b>
               </li>
               <li class="pa3 pa4-ns bb b--black-10">
@@ -93,7 +93,7 @@
           </div>
         </div>
 
-        <div class="fl w-100 pl3 pr3 mt3 ">
+        <div class="fl w-100 mt4 ">
           <div class="bg-white br3 box-shadow-grey">
             <ul class="list pl0 mt0 tl navy">
               <li
@@ -103,7 +103,7 @@
               </li>
               <li
                 class="flex items-center lh-copy pa3 ph0-l bb b--washed-blue ">
-                <img class="w2 h2 w2-ns h2-ns br-100 ml4" src="http://tachyons.io/img/avatar-mrmrs.jpg" />
+                <img class="w2 h2 w2-ns h2-ns br-100 ml4" src="http://tachyons.io/img/avatar-mrmrs.jpg"/>
                 <div class="pl3 flex-auto">
                   <span class="f6 db">Program 1 Day 3 - 01/08</span>
                   <span class="f5 fw5 db">The positioning of text within the page margins. Alignment</span>
@@ -111,7 +111,7 @@
               </li>
               <li
                 class="flex items-center lh-copy pa3 ph0-l bb b--washed-blue ">
-                <img class="w2 h2 w2-ns h2-ns br-100 ml4" src="http://tachyons.io/img/avatar-mrmrs.jpg" />
+                <img class="w2 h2 w2-ns h2-ns br-100 ml4" src="http://tachyons.io/img/avatar-mrmrs.jpg"/>
                 <div class="pl3 flex-auto">
                   <span class="f6 db">Program 1 Day 3 - 01/08</span>
                   <span class="f5 fw5 db">The positioning of text within the page margins. Alignment</span>
@@ -119,7 +119,7 @@
               </li>
               <li
                 class="flex items-center lh-copy pa3 ph0-l ">
-                <img class="w2 h2 w2-ns h2-ns br-100 ml4" src="http://tachyons.io/img/avatar-mrmrs.jpg" />
+                <img class="w2 h2 w2-ns h2-ns br-100 ml4" src="http://tachyons.io/img/avatar-mrmrs.jpg"/>
                 <div class="pl3 flex-auto">
                   <span class="f6 db">Program 1 Day 3 - 01/08</span>
                   <span class="f5 fw5 db">The positioning of text within the page margins. Alignment</span>
@@ -132,10 +132,7 @@
       </div>
     </div>
   </section>
-  <footer class="cf w-100 bg-light-gray
- lightest-blue
-
- shadow-3 mt5">
+  <footer class="cf w-100 bg-light-gray lightest-blue mt5">
     <div class="w-80 center tc pv4-ns">
       <div class="cf">
         <div class="f2 f3-ns b">FOOTER</div>
