--- a/service-web/src/views/LandingPage/landing-page.html
+++ b/service-web/src/views/LandingPage/landing-page.html
@@ -1,11 +1,12 @@
 <div class="wrapper">
-  <section class="dt w-100 mw8 ph3 ph3-m ph3-l center">
+  <section class="cf w-100 ph0 ph6-l ">
+    <div class="dt w-100 mw8 ph3 ph3-m ph3-l center">
     <div class="cf db mv5">
-      <div class="w-50 fl pt5-l pt3-m pt2">
-        <h1 class="f4 f1-l f1-m black w-50-l tr fr mt0-ns right--2 relative">Feel more
+      <div class="w-50 fl pt5-l pt5-m pt2">
+        <h1 class="f3 f1-l f1-m black w-70-l tr fr mt0-ns mb2 right--1 right--2-l relative">Feel more
           confident </h1>
         <a href="/"
-           class="f5 f5-l f5-m  fw4 blue fl no-underline w-100  tr pr0 pr5-l pr5-m"> Read More <i
+           class="f6 f5-l f5-m  fw4 blue fl no-underline w-100  tr pr0 pr5-l pr5-m"> Read More <i
           class=""><img class="v-mid" src="../../assets/images/romove-icon.png"/></i></a>
       </div>
       <div class="w-50 fl bg-light-gray h4 h5-l h5-m">
@@ -14,22 +15,23 @@
     <div class="cf db mv5">
       <div class="w-50 fl bg-light-gray h4 h5-l h5-m">
       </div>
-      <div class="w-50 fl pt5-l pt3-m pt2 relative">
-        <h1 class="f4 f1-l f1-m black w-70-l tl fl mt0-ns left--2 relative">Increase your wellbeing </h1>
+      <div class="w-50 fl pt5-l pt5-m pt2">
+        <h1 class="f3 f1-l f1-m black w-90-l tl fl mt0-ns mb2 left--1 left--2-l relative">Increase your wellbeing </h1>
         <a href="/"
-           class="f5 f5-l f5-m  fw4 blue fl no-underline w-100  tl pr0 pr5-l pr5-m"> Read More <i
+           class="f6 f5-l f5-m  fw4 blue fl no-underline w-100  tl pr0 pr5-l pr5-m"> Read More <i
           class=""><img class="v-mid" src="../../assets/images/romove-icon.png"/></i></a>
       </div>
     </div>
     <div class="cf db mv5">
-      <div class="w-50 fl pt5-l pt3-m pt2">
-        <h1 class="f4 f1-l f1-m black w-50-l tr fr mt0-ns right--2 relative">Change your life </h1>
+      <div class="w-50 fl pt5-l pt5-m pt2">
+        <h1 class="f3 f1-l f1-m black w-60 w-60-l w-60-m tr fr mt0-ns mb2 right--1 right--2-l relative">Change your life </h1>
         <a href="/"
-           class="f5 f5-l f5-m  fw4 blue fl no-underline w-100  tr pr0 pr5-l pr5-m"> Read More <i
+           class="f6 f5-l f5-m  fw4 blue fl no-underline w-100  tr pr0 pr5-l pr5-m"> Read More <i
           class=""><img class="v-mid" src="../../assets/images/romove-icon.png"/></i></a>
       </div>
       <div class="w-50 fl bg-light-gray h4 h5-l h5-m">
       </div>
+    </div>
     </div>
   </section>
   <section class="cf center w-100 ph3 ph6-ns gradient-h" id="features">
@@ -193,8 +195,8 @@
       </div>
     </div>
   </section>
-  <footer class="cf w-100 pa3 ph6-ns gradient-right white vh-50" id="feafooter">
-    <div class="mw8 center tl">
+  <footer class="cf w-100 pa3 ph6-ns gradient-right white vh-25" id="feafooter">
+    <div class="dt w-100 mw8 ph3 ph6-m ph6-l tl center">
       <div class="cf pt5">
         <div class="f3 f3-ns b w-30">Footer</div>
       </div>
