Testing github issues

--- a/service-web/src/views/LandingPage/landing-page.html
+++ b/service-web/src/views/LandingPage/landing-page.html
@@ -85,7 +85,7 @@
           <article class="pv2 fl w-100 pa2">
             <div class="bg-white br4 pa3">
               <h3 class="f5 b w-90-l ma0-ns pa0-ns">
-                "This is a good easy programme that anyone can fit into their day"
+                "This BLA BLA BLA"
               </h3>
             </div>
           </article>
