Changing the copy of the How it works section

--- a/service-web/src/views/LandingPage/landing-page.html
+++ b/service-web/src/views/LandingPage/landing-page.html
@@ -43,10 +43,10 @@
         <div class="w-90-m w-100-ns w-30-l  center tl">
           <div class="numberlist">
             <ol>
-              <li>Register</li>
-              <li>Get a daily activity on you your inbox</li>
-              <li>Complete the activity and check-in</li>
-              <li>Celebrate!</li>
+              <li>Create an account</li>
+              <li>Receive a daily challenge on your inbox</li>
+              <li>Complete the challenge</li>
+              <li>Check-in and reflect!</li>
             </ol>
           </div>
           <div class="w-90-m w-100-ns w-90-l  center">
