Added testimonials copy

--- a/service-web/src/views/LandingPage/landing-page.html
+++ b/service-web/src/views/LandingPage/landing-page.html
@@ -85,20 +85,6 @@
           <article class="pv2 fl w-100 pa2">
             <div class="bg-white br4 pa3">
               <h3 class="f5 b w-90-l ma0-ns pa0-ns">
-                "This BLA BLA BLA"
-              </h3>
-            </div>
-          </article>
-          <article class="pv2 fl w-100 pa2">
-            <div class="bg-white br4 pa3">
-              <h3 class="f5 fw3 w-90-l ma0-ns pa0-ns">
-                "I really enjoyed the programme, for once the day started up with me"
-              </h3>
-            </div>
-          </article>
-          <article class="pv2 fl w-100 pa2">
-            <div class="bg-white br4 pa3">
-              <h3 class="f5 b w-90-l ma0-ns pa0-ns">
                 "This is a good easy programme that anyone can fit into their day"
               </h3>
             </div>
@@ -113,21 +99,35 @@
           <article class="pv2 fl w-100 pa2">
             <div class="bg-white br4 pa3">
               <h3 class="f5 b w-90-l ma0-ns pa0-ns">
-                "This is a good easy programme that anyone can fit into their day"
+                "This programme lets you make small changes that will change your life"
               </h3>
             </div>
           </article>
           <article class="pv2 fl w-100 pa2">
             <div class="bg-white br4 pa3">
               <h3 class="f5 fw3 w-90-l ma0-ns pa0-ns">
-                "I really enjoyed the programme, for once the day started up with me"
+                "This is a simple programme which is easy to follow, I enjoyed the positive encouragement at the end of the day and I look forward to feeling better and fitter as I continue with my walking programme"
               </h3>
             </div>
           </article>
           <article class="pv2 fl w-100 pa2">
             <div class="bg-white br4 pa3">
               <h3 class="f5 b w-90-l ma0-ns pa0-ns">
-                "This is a good easy programme that anyone can fit into their day"
+                "Thank you for not putting me off the idea of exercise"
+              </h3>
+            </div>
+          </article>
+          <article class="pv2 fl w-100 pa2">
+            <div class="bg-white br4 pa3">
+              <h3 class="f5 fw3 w-90-l ma0-ns pa0-ns">
+                "Really enjoyed the week and the different approach. Thinking in small steps did not make it a chore but manageable and fun at times"
+              </h3>
+            </div>
+          </article>
+          <article class="pv2 fl w-100 pa2">
+            <div class="bg-white br4 pa3">
+              <h3 class="f5 b w-90-l ma0-ns pa0-ns">
+                "This was achievable. Helped me feel positive and enthusiastic. I involved my family and made everyday tasks more enjoyable."
               </h3>
             </div>
           </article>
@@ -136,56 +136,56 @@
           <article class="pv2 fl w-100 pa2">
             <div class="bg-white br4 pa3">
               <h3 class="f5 b w-90-l ma0-ns pa0-ns">
-                "This is a good easy programme that anyone can fit into their day"
+                "I did not realise how many possibilities I had to activate myself. Thanks to Active Pathways I am now more aware of small things which can transform my days into happy days."
               </h3>
             </div>
           </article>
           <article class="pv2 fl w-100 pa2">
             <div class="bg-white br4 pa3">
               <h3 class="f5 fw3 w-90-l ma0-ns pa0-ns">
-                "I really enjoyed the programme, for once the day started up with me"
+                "Your messages helped me to get moving again. Thank you!"
               </h3>
             </div>
           </article>
           <article class="pv2 fl w-100 pa2">
             <div class="bg-white br4 pa3">
               <h3 class="f5 b w-90-l ma0-ns pa0-ns">
-                "This is a good easy programme that anyone can fit into their day"
+                "Thank you for the kick up the ... I needed it. My big takeaway is exercise when you get up gives you a buzz which lasts all day. Highly recommend as a really good procrastination buster."
               </h3>
             </div>
           </article>
           <article class="pv2 fl w-100 pa2">
             <div class="bg-white br4 pa3">
               <h3 class="f5 fw3 w-90-l ma0-ns pa0-ns">
-                "I really enjoyed the programme, for once the day started up with me"
+                "This programme has made me look at life not as a routine but an adventure. Each day it gave me loads to think about."
               </h3>
             </div>
           </article>
           <article class="pv2 fl w-100 pa2">
             <div class="bg-white br4 pa3">
               <h3 class="f5 b w-90-l ma0-ns pa0-ns">
-                "This is a good easy programme that anyone can fit into their day"
+                "I really enjoyed doing the challenge. Made me think that a small action is still an achievement. Sometimes it can get overwhelmed by the things I should be doing and end up doing nothing. Now I will try and do a little at a time, even if it is just one percent as one percent is better than nothing and is one percent closer to  the job in hand. Thank you Active Pathways for changing my mindset."
               </h3>
             </div>
           </article>
           <article class="pv2 fl w-100 pa2">
             <div class="bg-white br4 pa3">
               <h3 class="f5 fw3 w-90-l ma0-ns pa0-ns">
-                "I really enjoyed the programme, for once the day started up with me"
+                "The programme is excellent as a daily motivational buddy to get you moving."
               </h3>
             </div>
           </article>
           <article class="pv2 fl w-100 pa2">
             <div class="bg-white br4 pa3">
               <h3 class="f5 b w-90-l ma0-ns pa0-ns">
-                "This is a good easy programme that anyone can fit into their day"
+                "The programme is excellent as a daily motivational buddy to get you moving."
               </h3>
             </div>
           </article>
           <article class="pv2 fl w-100 pa2">
             <div class="bg-white br4 pa3">
               <h3 class="f5 fw3 w-90-l ma0-ns pa0-ns">
-                "I really enjoyed the programme, for once the day started up with me"
+                "Very good for coach potatoes"
               </h3>
             </div>
           </article>
